registry/deploy-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-deployment
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      key: registry-pod
  template:
    metadata:
      labels:
        key: registry-pod
    spec:
      containers:
      - name: registry
        image: registry:2.6.2
        ports:
          - containerPort: 5000
