registry/service-registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: devops
spec:
  # ClusterIP NodePort LoadBalancer
  type: ClusterIP
  selector:
    key: devops-registry-pod
  ports:
    - name: cluster-registry
      protocol: TCP
      port: 48103
      targetPort: 5000
